<resources>
    <string name="app_name" translatable="false">WEB IDE</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dir_not_select">Dir not select</string>
    <string name="select">Select</string>
    <string name="create">Create</string>
    <string name="title_activity_editor">Editor</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="open">Open</string>
    <string name="undo">Undo</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="permission_denied">Permission denied</string>
    <string name="project.removed">Removed from list</string>
    <string name="project.config.error_read">Error read config</string>
    <string name="project.config.already_exist">Project already exist</string>
    <string name="project.add.title_empty">Title empty</string>
    <string name="project.add.dir_not_selected">Dir not selected</string>
    <string name="project.add.create_config_file_error">Create config file error</string>
    <string name="not_implemented">Not implemented</string>
    <string name="editor.save.error">Saving error</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="save">Save</string>

    <string name="title_projects">Projects</string>
    <string name="title_news">News</string>
    <string name="title_tools">Tools</string>
    <string name="title_activity_news">News</string>

    <string name="license.error">License verification failed, sorry 😔 \nPlease enable internet️ (If disabled) and restart application
    \n\nIf application not purchased you can make it by click on button \"purchase\"</string>
    <string name="license.purchase">Purchase</string>

    <string name="content">Content</string>
</resources>
